--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@
   width: 100%;
   height: 100%;
   background: linear-gradient(135deg, #ff9a9e, #fad0c4);
-  background-image: url('background.jpeg');
+  background-image: url('Background.jpeg');
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center;
